--- a/BUILD.gn
+++ b/BUILD.gn
@@ -170,6 +170,7 @@ config("skia_public") {
   }
   if (is_ohos) {
     defines += [ "SK_ENABLE_STENCIL_CULLING_OHOS" ]
+    defines += [ "SUPPORT_OPAQUE_OPTIMIZATION" ]
   }
 }
 
