--- a/m133/gn/skia.gni
+++ b/m133/gn/skia.gni
@@ -10,6 +10,10 @@ if (!defined(is_skia_standalone)) {
   is_skia_standalone = true
 }
 
+if (!defined(ios_use_simulator)) {
+  ios_use_simulator =
+    target_os == "ios" && (target_cpu == "x86" || target_cpu == "x64")
+}
 is_skia_dev_build = is_skia_standalone && !is_official_build
 
 declare_args() {
@@ -232,6 +236,8 @@ assert(!skia_use_dawn || skia_enable_graphite)  # Dawn is Graphite-only
 # Our tools require static linking (they use non-exported symbols), and the Ganesh backend.
 skia_enable_tools = true # TODO: 133.`is_component_build` is false (//build/config/BUILDCONFIG.gn is set to false and Skia's BUILDCONFIG.gn is not used)
     #skia_enable_tools && !is_component_build && skia_enable_ganesh
+skia_enable_tools =
+    skia_enable_tools && !is_arkui_x
 
 if (skia_enable_optimize_size) {
   assert(
