--- a/m133/modules/skunicode/BUILD.gn
+++ b/m133/modules/skunicode/BUILD.gn
@@ -98,6 +98,15 @@ if (skia_use_icu || skia_use_client_icu || skia_use_libgrapheme ||
       } else {
         sources += skia_unicode_builtin_icu_sources
         deps += [ "${skia_third_party_dir}/icu" ]
+        if (is_arkui_x) {
+          defines += [ "U_DISABLE_RENAMING=0" ]
+          deps -= [ "${skia_third_party_dir}/icu" ]
+          deps += [ "//third_party/icu/icu4c:static_icuuc" ]
+          include_dirs += [
+            "//third_party/icu/icu4c/source/common",
+            "//third_party/icu/icu4c"
+          ]
+        }
       }
     }
   }
