--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -98,6 +98,7 @@ config("skia_public") {
     defines += [
       "SKIA_OHOS",
       "SKIA_OHOS_SHADER_REDUCE",
+      "SKIA_DFX_FOR_OHOS",
     ]
   }
   if (is_component_build) {
