--- a/m133/gn/gpu.gni
+++ b/m133/gn/gpu.gni
@@ -220,6 +220,8 @@ skia_ganesh_private = [
   "$_src/gpu/ganesh/GrOpsTypes.h",
   "$_src/gpu/ganesh/GrPaint.cpp",
   "$_src/gpu/ganesh/GrPaint.h",
+  "$_src/gpu/ganesh/GrPerfMonitorReporter.cpp",
+  "$_src/gpu/ganesh/GrPerfMonitorReporter.h",
   "$_src/gpu/ganesh/GrPersistentCacheUtils.cpp",
   "$_src/gpu/ganesh/GrPersistentCacheUtils.h",
   "$_src/gpu/ganesh/GrPipeline.cpp",
