fix arkui ut compile
Signed-off-by: Amber <lvang3@huawei.com>
Change-Id: I113b3bb9b606aba049b5866d315d78e617470e1b

--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -2303,10 +2303,10 @@ skia_component("skia") {
     sources += [ "src/ports/SkDebug_stdio.cpp" ]
   }
 
-  if (skia_enable_spirv_validation) {
-    deps += [ "${skia_third_party_dir}/externals/spirv-tools:spvtools_val" ]
-    defines += [ "SK_ENABLE_SPIRV_VALIDATION" ]
-  }
+  # if (skia_enable_spirv_validation) {
+  #   deps += [ "${skia_third_party_dir}/externals/spirv-tools:spvtools_val" ]
+  #   defines += [ "SK_ENABLE_SPIRV_VALIDATION" ]
+  # }
 
   if (skia_include_multiframe_procs) {
     sources += [ "tools/SkSharingProc.cpp" ]
