--- a/m133/modules/bentleyottmann/BUILD.gn
+++ b/m133/modules/bentleyottmann/BUILD.gn
@@ -29,6 +29,7 @@ if (skia_enable_bentleyottmann) {
         "../..:skia",
         "../..:test",
       ]
+      external_deps = [ "hitrace:hitrace_meter" ]
     }
   }
 }
