--- a/m133/modules/svg/BUILD.gn
+++ b/m133/modules/svg/BUILD.gn
@@ -28,6 +28,9 @@ if (skia_enable_svg && skia_use_expat) {
     if (use_oh_skia) {
       configs += [ "../../:skia_wno" ]
     }
+    external_deps = [ "hitrace:hitrace_meter" ]
+    part_name = "skia"
+    subsystem_name = "thirdparty"
   }
 
   if (skia_enable_tools) {
@@ -64,6 +67,7 @@ if (skia_enable_svg && skia_use_expat) {
         "../..:test",
         "../skshaper",
       ]
+      external_deps = [ "hitrace:hitrace_meter" ]
     }
   }
 } else {
