--- a/m133/modules/sksg/BUILD.gn
+++ b/m133/modules/sksg/BUILD.gn
@@ -29,6 +29,7 @@ if (defined(is_skia_standalone) && skia_enable_tools) {
       "../..:skia",
       "../..:test",
     ]
+    external_deps = [ "hitrace:hitrace_meter" ]
   }
 
   skia_source_set("slides") {
