--- a/m133/modules/skshaper/BUILD.gn
+++ b/m133/modules/skshaper/BUILD.gn
@@ -85,6 +85,7 @@ if (skia_enable_skshaper) {
           "../..:test",
           "../skunicode",
         ]
+        external_deps = [ "hitrace:hitrace_meter" ]
       } else {
         sources = []
       }
