--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4986,7 +4986,7 @@ ohos_static_library("sksl_ext_static") {
     }
 
     if (is_android) {
-      if (use_new_skia) { 
+      if (skia_feature_upgrade) {
         deps += [ "${skia_third_party_dir}/expat:expatm133" ]
       } else {
         deps += [ "${skia_third_party_dir}/expat" ]
