SKIA主体的三方依赖与OH third_party归一
Signed-off-by: zhongning5 <zhongning5@huawei.com>
Change-Id: If41b271f4aeef04bfaa0f0b73952dced1e9677d1

--- a/m133/modules/skshaper/BUILD.gn
+++ b/m133/modules/skshaper/BUILD.gn
@@ -68,7 +68,11 @@ if (skia_enable_skshaper) {
           "${skia_third_party_dir}/harfbuzz",
         ]
       } else {
-        deps += [ "${skia_third_party_dir}/harfbuzz" ]
+        if (skia_use_system_lib) {
+          external_deps = [ "harfbuzz:harfbuzz_static_for_skia" ]
+        } else {
+          deps += [ "${skia_third_party_dir}/harfbuzz" ]
+        }
       }
     }
     configs += [ "../../:skia_private" ]
