--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4836,8 +4836,7 @@ ohos_static_library("sksl_ext_static") {
     if (is_ohos) {
       sources += [ "${skia_root_dir}/src/ports/SkDebug_ohos.cpp" ]
       external_deps = [
-          "hilog:libhilog",
-          "hitrace:hitrace_meter",
+          "hilog:libhilog"
       ]
     } else if (is_android) {
       sources += [ "${skia_root_dir}/src/ports/SkDebug_android.cpp" ]
@@ -4983,7 +4982,6 @@ ohos_static_library("sksl_ext_static") {
     if (is_ohos) {
       external_deps = [
         "bounds_checking_function:libsec_shared",
-        "hitrace:hitrace_meter",
       ]
     }
 
