--- a/m133/modules/svg/BUILD.gn
+++ b/m133/modules/svg/BUILD.gn
@@ -64,6 +64,19 @@ if (skia_enable_svg && skia_use_expat) {
         "../..:test",
         "../skshaper",
       ]
+      if (is_ohos) {
+        external_deps = [ "hitrace:hitrace_meter" ]
+      }
+
+      if (is_arkui_x) {
+          deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+      } else if (is_ohos) {
+        if (is_component_build) {
+          external_deps += [ "bounds_checking_function:libsec_shared" ]
+        } else {
+          external_deps += [ "bounds_checking_function:libsec_static" ]
+        }
+      }
     }
   }
 } else {
