--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -688,6 +688,18 @@ skia_source_set("fontscanner_tests") {
     "tests/FontScanner.cpp",
     "tests/FontScanner.h",
   ]
+  if (is_ohos) {
+    external_deps = [ "hitrace:hitrace_meter" ]
+  }
+  if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
+  }
 }
 
 optional("fontmgr_FontConfigInterface") {
@@ -1102,6 +1114,18 @@ if (skia_compile_modules) {
     sources += skia_sksl_codegen_sources
     include_dirs = [ "." ]
     deps = [ ":run_sksllex" ]
+    if (is_ohos) {
+      external_deps = [ "hitrace:hitrace_meter" ]
+    }
+    if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
+    }
   }
 
   sksl_minify_path = "$root_out_dir/"
@@ -1240,6 +1264,17 @@ if (skia_compile_sksl_tests) {
       "${skia_third_party_dir}/externals/spirv-tools:spvtools_val",
       "${skia_third_party_dir}/spirv-cross:spirv_cross",
     ]
+    if (is_ohos) {
+      external_deps += [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+        if (defined(defines)) {
+          defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+        } else {
+          defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+        }
+      }
+    }
   }
 
   skslc_path = "$root_out_dir/"
@@ -1452,6 +1487,28 @@ optional("gpu_shared") {
   if (is_android) {
     sources += skia_shared_android_sources
   }
+
+  if (is_ohos) {
+    external_deps += [ "hitrace:hitrace_meter" ]
+    if (!build_ohos_sdk && !is_arkui_x) {
+      external_deps += [ "init:libbegetutil" ]
+      if (defined(defines)) {
+        defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+      } else {
+        defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+      }
+    }
+  }
+
+  if (is_arkui_x) {
+    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+  } else if (is_ohos) {
+    if (is_component_build) {
+      external_deps += [ "bounds_checking_function:libsec_shared" ]
+    } else {
+      external_deps += [ "bounds_checking_function:libsec_static" ]
+    }
+  }
 }
 
 optional("gpu") {
@@ -1590,6 +1647,28 @@ optional("gpu") {
 
   if (is_debug || skia_build_for_debugger) {
     public_defines += [ "SK_ENABLE_DUMP_GPU" ]
+  }
+
+  if (is_ohos) {
+    external_deps += [ "hitrace:hitrace_meter" ]
+    if (!build_ohos_sdk && !is_arkui_x) {
+      external_deps += [ "init:libbegetutil" ]
+      if (defined(defines)) {
+        defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+      } else {
+        defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+      }
+    }
+  }
+
+  if (is_arkui_x) {
+    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+  } else if (is_ohos) {
+    if (is_component_build) {
+      external_deps += [ "bounds_checking_function:libsec_shared" ]
+    } else {
+      external_deps += [ "bounds_checking_function:libsec_static" ]
+    }
   }
 }
 
@@ -1782,6 +1861,19 @@ optional("pdf") {
       } else {
         deps += [ "${skia_third_party_dir}/zlib" ]
       }
+    }
+  }
+  if (is_ohos && !build_ohos_sdk) {
+    external_deps += [ "hitrace:hitrace_meter" ]
+  }
+
+  if (is_arkui_x) {
+    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+  } else if (is_ohos) {
+    if (is_component_build) {
+      external_deps += [ "bounds_checking_function:libsec_shared" ]
+    } else {
+      external_deps += [ "bounds_checking_function:libsec_static" ]
     }
   }
   public = skia_pdf_public
@@ -2361,6 +2453,18 @@ skia_component("skia") {
   if (!skia_enable_ganesh && !skia_enable_graphite) {
     sources += skia_no_slug_srcs
   }
+  if (is_ohos) {
+    external_deps = [ "hitrace:hitrace_meter" ]
+  }
+  if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+  } else if (is_ohos) {
+    if (is_component_build) {
+      external_deps += [ "bounds_checking_function:libsec_shared" ]
+    } else {
+      external_deps += [ "bounds_checking_function:libsec_static" ]
+    }
+  }
 }
 
 # DebugCanvas used in experimental/wasm-skp-debugger
@@ -2838,6 +2942,18 @@ if (skia_enable_tools) {
       libs +=
           [ "${fuchsia_sdk_path}/arch/${target_cpu}/sysroot/lib/libzircon.so" ]
     }
+    if (is_ohos) {
+      external_deps += [ "hitrace:hitrace_meter" ]
+    }
+    if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
+    }
   }  # test_lib("gpu_tool_utils")
 
   test_lib("flags") {
@@ -2888,6 +3004,18 @@ if (skia_enable_tools) {
         "tools/trace/SkPerfettoTrace.h",
       ]
       defines = [ "SK_USE_PERFETTO" ]
+    }
+    if (is_ohos) {
+      external_deps = [ "hitrace:hitrace_meter" ]
+    }
+    if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
     }
   }
 
@@ -3022,6 +3150,18 @@ if (skia_enable_tools) {
       "modules/skshaper",
     ]
     external_deps = [ "vulkan-headers:vulkan_headers" ]
+    if (is_ohos) {
+      external_deps += [ "hitrace:hitrace_meter" ]
+    }
+    if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
+    }
     if (gm_test_enable_font) {
       deps += [
         "modules/skparagraph",
@@ -3059,6 +3199,18 @@ if (skia_enable_tools) {
     public_deps = [
       ":gpu_tool_utils",  # Test.h #includes headers from this target.
     ]
+    if (is_ohos) {
+      external_deps = [ "hitrace:hitrace_meter" ]
+    }
+    if (is_arkui_x) {
+        deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
+    }
   }
 
   import("gn/tests.gni")
@@ -3143,6 +3295,18 @@ if (skia_enable_tools) {
         "modules/svg:tests",
       ]
     }
+    if (is_ohos) {
+      external_deps += [ "hitrace:hitrace_meter" ]
+    }
+    if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
+    }
   }
 
   import("gn/bench.gni")
@@ -3163,6 +3327,18 @@ if (skia_enable_tools) {
       "modules/skparagraph:bench",
       "modules/skshaper",
     ]
+    if (is_ohos) {
+      external_deps = [ "hitrace:hitrace_meter" ]
+    }
+    if (is_arkui_x) {
+      deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+    } else if (is_ohos) {
+      if (is_component_build) {
+        external_deps += [ "bounds_checking_function:libsec_shared" ]
+      } else {
+        external_deps += [ "bounds_checking_function:libsec_static" ]
+      }
+    }
   }
 
   if (is_linux || is_mac || skia_enable_optimize_size) {
