--- a/m133/modules/skparagraph/BUILD.gn
+++ b/m133/modules/skparagraph/BUILD.gn
@@ -229,6 +229,18 @@ if (skia_enable_skparagraph && skia_enable_skshaper && skia_enable_skunicode &&
             "../skunicode",
           ]
         }
+        if (is_ohos) {
+          external_deps += [ "hitrace:hitrace_meter" ]
+        }
+        if (is_arkui_x) {
+          deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+        } else if (is_ohos) {
+          if (is_component_build) {
+            external_deps += [ "bounds_checking_function:libsec_shared" ]
+          } else {
+            external_deps += [ "bounds_checking_function:libsec_static" ]
+          }
+        }
       } else {
         sources = []
       }
