--- a/m133/modules/skunicode/BUILD.gn
+++ b/m133/modules/skunicode/BUILD.gn
@@ -235,6 +235,7 @@ if (skia_use_icu || skia_use_client_icu || skia_use_libgrapheme ||
           "../..:test",
         ]
         sources = skia_unicode_tests
+        external_deps = []
         if (skia_use_system_lib) {
           external_deps += [ "icu:static_icu_bidi_for_skia" ]
         } else {
