--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4987,6 +4987,7 @@ ohos_static_library("sksl_ext_static") {
     if (is_ohos) {
       external_deps = [
         "bounds_checking_function:libsec_shared",
+        "hitrace:hitrace_meter",
       ]
     }
 
