arkui-x update master OH to weekly_20250630 and OH fix build bug
Signed-off-by: zhangqing <zhangqing50@h-partners.com>
Change-Id: I92ec8012c1a23f1df84b02111b08e17cf15cb811

--- a/m133/modules/skparagraph/BUILD.gn
+++ b/m133/modules/skparagraph/BUILD.gn
@@ -59,11 +59,13 @@ ohos_static_library("skia_paragraph_ohos_new") {
   if (!is_arkui_x) {
     sources += [
       "$skia_modules_root/skunicode/src/SkUnicode.cpp",
-      "$skia_modules_root/skunicode/src/SkUnicode_icu.cpp",
-      "$skia_modules_root/skunicode/src/SkUnicode_icu_bidi.cpp",
-      "$skia_modules_root/skunicode/src/SkUnicode_icu_builtin.cpp",
     ]
   }
+  sources += [
+    "$skia_modules_root/skunicode/src/SkUnicode_icu.cpp",
+    "$skia_modules_root/skunicode/src/SkUnicode_icu_bidi.cpp",
+    "$skia_modules_root/skunicode/src/SkUnicode_icu_builtin.cpp",
+  ]
 
   # skshaper
   defines += [ "SKSHAPER_IMPLEMENTATION=1" ]
