--- a/m133/modules/skunicode/BUILD.gn
+++ b/m133/modules/skunicode/BUILD.gn
@@ -85,9 +85,11 @@ if (skia_use_icu || skia_use_client_icu || skia_use_libgrapheme ||
         defines += [ "U_DISABLE_RENAMING=1" ]
       }
 
-      sources = skia_unicode_icu_bidi_sources
-      sources += skia_unicode_bidi_full_sources
-      sources += skia_unicode_icu_sources
+      sources = skia_unicode_bidi_full_sources
+      if (!is_arkui_x) {
+        sources += skia_unicode_icu_bidi_sources
+        sources += skia_unicode_icu_sources
+      }
       sources += [ "../../third_party/icu/SkLoadICU.cpp" ]
 
       # only available for Android at the moment
@@ -103,12 +105,13 @@ if (skia_use_icu || skia_use_client_icu || skia_use_libgrapheme ||
           deps += [ "${skia_third_party_dir}/icu" ]
         }
         if (is_arkui_x) {
+          sources -= skia_unicode_builtin_icu_sources
           defines += [ "U_DISABLE_RENAMING=0" ]
           deps -= [ "${skia_third_party_dir}/icu" ]
           deps += [ "//third_party/icu/icu4c:static_icuuc" ]
           include_dirs += [
             "//third_party/icu/icu4c/source/common",
-            "//third_party/icu/icu4c"
+            "//third_party/icu/icu4c",
           ]
         }
       }
@@ -235,6 +238,7 @@ if (skia_use_icu || skia_use_client_icu || skia_use_libgrapheme ||
           "../..:test",
         ]
         sources = skia_unicode_tests
+        external_deps = []
         if (skia_use_system_lib) {
           external_deps += [ "icu:static_icu_bidi_for_skia" ]
         } else {
