--- a/m133/modules/skresources/BUILD.gn
+++ b/m133/modules/skresources/BUILD.gn
@@ -9,12 +9,12 @@ config("public_config") {
   include_dirs = [ "include" ]
 }
 
-skia_source_set("skresources") {
+static_library("skresources") {
   import("skresources.gni")
   public_configs = [ ":public_config" ]
   public = skia_skresources_public
   sources = skia_skresources_sources
-  configs = [
+  configs += [
     "../../:skia_private",
     "../../:skia_library",
   ]
