--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -79,7 +79,7 @@ config("skia_wno") {
 
 # Skia public API, generally provided by :skia.
 config("skia_public") {
-  include_dirs = [ "." ]
+  include_dirs = [ "." , "./include" ]
 
   defines = [
     "SK_CODEC_DECODES_BMP",
