修复问题单dts2025070108427-skia升级DrawVertices相关用例异常问题
Signed-off-by: KevinXyy <xinyuyangakashi@outlook.com>
Change-Id: I07db916894978cba4d1cd0c331d9fcb1a4d8ffb5

--- a/m133/gn/oh_skia.gni
+++ b/m133/gn/oh_skia.gni
@@ -39,6 +39,7 @@ skia_common_defines = [
   "SK_UNICODE_AVAILABLE",
   "SKUNICODE_IMPLEMENTATION=1",
   "SK_SUPPORT_PDF",
+  "SK_LEGACY_IGNORE_DRAW_VERTICES_BLEND_WITH_NO_SHADER",
 ]
 
 skia_common_cflags = [
