fix mac sdk build error
Signed-off-by: zhongning5 <zhongning5@huawei.com>
Change-Id: I18c8baab92445afbf2ebfe4431b29ee80f261171

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4660,10 +4660,12 @@ ohos_static_library("sksl_ext_static") {
       "-fno-rtti",
     ]
 
-    ldflags = [
-      "-Wl,--gc-sections",
-      "-Wl,--icf=safe",
-    ]
+    if (!is_mac) {
+      ldflags = [
+        "-Wl,--gc-sections",
+        "-Wl,--icf=safe",
+      ]
+    }
 
     if (skia_build_for_debugger) {
       defines += [ "SK_BUILD_FOR_DEBUGGER" ]
