fix build error
Signed-off-by: zhongning5 <zhongning5@huawei.com>
Change-Id: Ia8011f83c3f81af4eb20a21847db31e955facb6e

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4660,7 +4660,7 @@ ohos_static_library("sksl_ext_static") {
       "-fno-rtti",
     ]
 
-    if (!is_mac) {
+    if (!is_mac && !is_asan) {
       ldflags = [
         "-Wl,--gc-sections",
         "-Wl,--icf=safe",
