--- a/src/ports/skia_ohos/config/fontconfig_ohos.json
+++ b/src/ports/skia_ohos/config/fontconfig_ohos.json
@@ -1,4 +1,17 @@
 /*
+ * Copyright (c) 2025 Huawei Device Co., Ltd.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ *
  * fontconfig_ohos.json - Internal System Font Configuration File
  *
  * WARNING:
@@ -108,7 +121,7 @@
       "lang": "",
       "family": "Noto Sans",
       "file": "NotoSans[wdth,wght].ttf",
-      "range": [1023, 2181038096, 4243448, 2684354754, 1409351777, 67108874, 0, 0, 0, 2, 0]
+      "range": [1023, 2181038080, 4243448, 2684354754, 1409351777, 67108874, 0, 65536, 0, 2, 0]
     },
     {
       "type": 1,
@@ -367,7 +380,7 @@
       "lang": "und-Cprt",
       "family": "Noto Sans Cypriot",
       "file": "NotoSansCypriot-Regular.ttf",
-      "range": [111, 0, 5440, 0, 0, 134217792, 0, 0, 0, 0, 0]
+      "range": [111, 0, 5440, 0, 0, 134217728, 0, 0, 0, 0, 0]
     },
     {
       "type": 1,
@@ -486,7 +499,7 @@
       "lang": "und-Lisu",
       "family": "Noto Sans Lisu",
       "file": "NotoSansLisu[wght].ttf",
-      "range": [111, 0, 4199744, 134219776, 0, 0, 0, 33554432, 0, 0, 0]
+      "range": [111, 0, 4199744, 134217728, 0, 0, 0, 33554432, 0, 0, 0]
     },
     {
       "type": 1,
@@ -521,7 +534,7 @@
       "lang": "und-Talu",
       "family": "Noto Sans New Tai Lue",
       "file": "NotoSansNewTaiLue[wght].ttf",
-      "range": [111, 2097152, 4199744, 2048, 0, 4, 0, 0, 0, 0, 0]
+      "range": [111, 2097152, 4199744, 0, 0, 0, 0, 0, 0, 0, 0]
     },
     {
       "type": 1,
@@ -761,35 +774,35 @@
       "lang": "und-Zsym",
       "family": "Noto Sans Symbols 2",
       "file": "NotoSansSymbols2-Regular.ttf",
-      "range": [111, 0, 2848445760, 8388608, 0, 5000, 32768, 0, 2013265920, 2127790080, 0]
+      "range": [111, 0, 2848445760, 8388608, 0, 5000, 32768, 0, 1879048192, 2127790080, 0]
     },
     {
       "type": 1,
       "lang": "und-Tale",
       "family": "Noto Sans Tai Le",
       "file": "NotoSansTaiLe-Regular.ttf",
-      "range": [111, 1048584, 4199744, 2048, 0, 0, 0, 0, 0, 0, 0]
+      "range": [111, 1048584, 4199744, 0, 0, 0, 0, 0, 0, 0, 0]
     },
     {
       "type": 1,
       "lang": "und-Yiii",
       "family": "Noto Sans Yi",
       "file": "NotoSansYi-Regular.ttf",
-      "range": [111, 0, 5440, 100673536, 0, 4, 0, 0, 0, 0, 0]
+      "range": [111, 0, 5440, 100671488, 0, 0, 0, 0, 0, 0, 0]
     },
     {
       "type": 1,
       "lang": "und-Mong",
       "family": "Noto Sans Mongolian",
       "file": "NotoSansMongolian-Regular.ttf",
-      "range": [111, 131072, 4724032, 2048, 2147483648, 0, 0, 64, 0, 0, 0]
+      "range": [111, 131072, 4724032, 0, 2147483648, 0, 0, 64, 0, 0, 0]
     },
     {
       "type": 1,
       "lang": "und-Phag",
       "family": "Noto Sans Phags-Pa",
       "file": "NotoSansPhags-Pa-Regular.ttf",
-      "range": [111, 131072, 4199744, 2048, 268435464, 0, 0, 0, 0, 0, 0]
+      "range": [111, 131072, 4199744, 0, 268435464, 0, 0, 0, 0, 0, 0]
     },
     {
       "type": 1,
@@ -824,7 +837,7 @@
       "lang": "und-Lina",
       "family": "Noto Sans Linear A",
       "file": "NotoSansLinearA-Regular.ttf",
-      "range": [111, 0, 5440, 0, 0, 33554496, 0, 0, 0, 0, 0]
+      "range": [111, 0, 5440, 0, 0, 33554432, 0, 0, 0, 0, 0]
     },
     {
       "type": 1,
@@ -1034,13 +1047,14 @@
       "lang": "und-Math",
       "family": "Noto Sans Math",
       "file": "NotoSansMath-Regular.ttf",
-      "range": [511, 0, 4158250248, 0, 268435456, 4, 0, 0, 2147483648, 33570816, 0]
+      "range": [511, 0, 4158250248, 0, 268435456, 0, 0, 0, 2147483648, 33570816, 0]
     },
     {
       "type": 1,
       "lang": "zh-Hans",
       "family": "HYQiHei L3",
-      "file": "HYQiHeiL3.ttf"
+      "file": "HYQiHeiL3.ttf",
+      "range": [3, 0, 0, 0, 0, 0, 0, 0, 0, 2147483648, 15]
     },
     {
       "type": 0,
