--- a/BUILD.gn
+++ b/BUILD.gn
@@ -2030,6 +2030,10 @@ if (use_oh_skia) {
     }
   }
 
+  config("oboe_config") {
+    include_dirs = [ "${skia_third_party_dir}/externals/oboe" ]
+  }
+
   ohos_shared_library("skia_canvaskit") {
     branch_protector_ret = "pac_ret"
     part_name = "skia"
@@ -2046,6 +2050,7 @@ if (use_oh_skia) {
       ":skia_config",
       ":harfbuzz_config",
       ":icu_config",
+      ":oboe_config",
     ]
     configs = skia_library_configs
     if (enhanced_opt) {
