--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -178,6 +178,16 @@ config("skia_public") {
   if (skia_vk_enable_partialrender) {
     defines += [ "SK_VK_PARTIALRENDER" ]
   }
+
+  if (is_ohos) {
+    if (!build_ohos_sdk && !is_arkui_x) {
+      if (defined(defines)) {
+        defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+      } else {
+        defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+      }
+    }
+  }
 }
 
 # Skia internal APIs, used by Skia itself and a few test tools.
@@ -687,6 +697,9 @@ skia_source_set("fontscanner_tests") {
   ]
   if (is_ohos) {
     external_deps = [ "hitrace:hitrace_meter" ]
+    if (!build_ohos_sdk && !is_arkui_x) {
+      external_deps += [ "init:libbegetutil" ]
+    }
   }
   if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -1113,6 +1126,9 @@ if (skia_compile_modules) {
     deps = [ ":run_sksllex" ]
     if (is_ohos) {
       external_deps = [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+      }
     }
     if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -1650,11 +1666,6 @@ optional("gpu") {
     external_deps += [ "hitrace:hitrace_meter" ]
     if (!build_ohos_sdk && !is_arkui_x) {
       external_deps += [ "init:libbegetutil" ]
-      if (defined(defines)) {
-        defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
-      } else {
-        defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
-      }
     }
   }
 
@@ -1860,8 +1871,11 @@ optional("pdf") {
       }
     }
   }
-  if (is_ohos && !build_ohos_sdk) {
+  if (is_ohos) {
     external_deps += [ "hitrace:hitrace_meter" ]
+    if (!build_ohos_sdk && !is_arkui_x) {
+      external_deps += [ "init:libbegetutil" ]
+    }
   }
 
   if (is_arkui_x) {
@@ -2452,6 +2466,9 @@ skia_component("skia") {
   }
   if (is_ohos) {
     external_deps = [ "hitrace:hitrace_meter" ]
+    if (!build_ohos_sdk && !is_arkui_x) {
+      external_deps += [ "init:libbegetutil" ]
+    }
   }
   if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -2486,6 +2503,7 @@ skia_static_library("pathkit") {
   configs = skia_library_configs
 
   deps = [ ":hsw" ]
+  external_deps = []
 
   sources = []
   sources += skia_pathops_sources
@@ -2543,6 +2561,9 @@ skia_static_library("pathkit") {
     "src/utils/SkParse.cpp",
     "src/utils/SkParsePath.cpp",
   ]
+  if (!build_ohos_sdk && !is_arkui_x) {
+    external_deps += [ "init:libbegetutil" ]
+  }
 }
 
 group("modules") {
@@ -2941,6 +2962,9 @@ if (skia_enable_tools) {
     }
     if (is_ohos) {
       external_deps += [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+      }
     }
     if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -3004,6 +3028,9 @@ if (skia_enable_tools) {
     }
     if (is_ohos) {
       external_deps = [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+      }
     }
     if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -3149,6 +3176,9 @@ if (skia_enable_tools) {
     external_deps = [ "vulkan-headers:vulkan_headers" ]
     if (is_ohos) {
       external_deps += [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+      }
     }
     if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -3198,6 +3228,9 @@ if (skia_enable_tools) {
     ]
     if (is_ohos) {
       external_deps = [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+      }
     }
     if (is_arkui_x) {
         deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -3294,6 +3327,9 @@ if (skia_enable_tools) {
     }
     if (is_ohos) {
       external_deps += [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+      }
     }
     if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
@@ -3326,6 +3362,9 @@ if (skia_enable_tools) {
     ]
     if (is_ohos) {
       external_deps = [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+      }
     }
     if (is_arkui_x) {
       deps += [ "//third_party/bounds_checking_function:libsec_static" ]
