--- a/m133/modules/bentleyottmann/BUILD.gn
+++ b/m133/modules/bentleyottmann/BUILD.gn
@@ -31,6 +31,14 @@ if (skia_enable_bentleyottmann) {
       ]
       if (is_ohos) {
         external_deps = [ "hitrace:hitrace_meter" ]
+        if (!build_ohos_sdk && !is_arkui_x) {
+          external_deps += [ "init:libbegetutil" ]
+          if (defined(defines)) {
+            defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+          } else {
+            defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+          }
+        }
       }
       if (is_arkui_x) {
           deps += [ "//third_party/bounds_checking_function:libsec_static" ]
