--- a/m133/modules/skparagraph/BUILD.gn
+++ b/m133/modules/skparagraph/BUILD.gn
@@ -216,6 +216,14 @@ if (skia_enable_skparagraph && skia_enable_skshaper && skia_enable_skunicode &&
         sources = skparagraph_tests
         if (is_ohos) {
           external_deps = [ "hitrace:hitrace_meter" ]
+          if (!build_ohos_sdk && !is_arkui_x) {
+            external_deps += [ "init:libbegetutil" ]
+            if (defined(defines)) {
+              defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+            } else {
+              defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+            }
+          }
         }
         if (use_oh_skia) {
           deps = [
@@ -233,6 +241,9 @@ if (skia_enable_skparagraph && skia_enable_skshaper && skia_enable_skunicode &&
         }
         if (is_ohos) {
           external_deps += [ "hitrace:hitrace_meter" ]
+          if (!build_ohos_sdk && !is_arkui_x) {
+            external_deps += [ "init:libbegetutil" ]
+          }
         }
         if (is_arkui_x) {
           deps += [ "//third_party/bounds_checking_function:libsec_static" ]
