--- a/m133/modules/sksg/BUILD.gn
+++ b/m133/modules/sksg/BUILD.gn
@@ -31,6 +31,14 @@ if (defined(is_skia_standalone) && skia_enable_tools) {
     ]
     if (is_ohos) {
       external_deps = [ "hitrace:hitrace_meter" ]
+      if (!build_ohos_sdk && !is_arkui_x) {
+        external_deps += [ "init:libbegetutil" ]
+        if (defined(defines)) {
+          defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+        } else {
+          defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+        }
+      }
     }
 
     if (is_arkui_x) {
