--- a/m133/modules/svg/BUILD.gn
+++ b/m133/modules/svg/BUILD.gn
@@ -66,6 +66,14 @@ if (skia_enable_svg && skia_use_expat) {
       ]
       if (is_ohos) {
         external_deps = [ "hitrace:hitrace_meter" ]
+        if (!build_ohos_sdk && !is_arkui_x) {
+          external_deps += [ "init:libbegetutil" ]
+          if (defined(defines)) {
+            defines += [ "NOT_BUILD_FOR_OHOS_SDK" ]
+          } else {
+            defines = [ "NOT_BUILD_FOR_OHOS_SDK" ]
+          }
+        }
       }
 
       if (is_arkui_x) {
