--- a/m133/modules/skparagraph/BUILD.gn
+++ b/m133/modules/skparagraph/BUILD.gn
@@ -32,6 +32,11 @@ ohos_static_library("skia_paragraph_ohos_new") {
   sources = []
   external_deps = []
   public_configs = [ ":skia_paragraph_config" ]
+  include_dirs = []
+  if (ohos_indep_compiler_enable) {
+    include_dirs += [ "//binarys/third_party/icu/innerapis/shared_icuuc/includes/common" ]
+  }
+
   if (skia_feature_upgrade) {
     defines = [
       "ENABLE_TEXT_ENHANCE",
@@ -108,7 +113,7 @@ ohos_static_library("skia_paragraph_ohos_new") {
   }
 
   if (is_arkui_x) {
-    include_dirs = [ "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter" ]
+    include_dirs += [ "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter" ]
     defines += [ "CROSS_PLATFORM" ]
     deps += [
       "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog_${target_os}",
