fix vulkan deps
Signed-off-by: h00868521 <huzhe10@huawei.com>
Change-Id: Ib57b9de36d5597f490ecf8ec85399ec55d390964

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4544,8 +4544,14 @@ ohos_static_library("sksl_ext_static") {
     part_name = "skia"
     subsystem_name = "thirdparty"
 
+    public_external_deps = []
+
+    if (skia_use_vulkan) {
+      public_external_deps += [ "vulkan-headers:vulkan_headers" ]
+    }
+
     if (is_ohos) {
-      public_external_deps = [ "hitrace:hitrace_meter" ]
+      public_external_deps += [ "hitrace:hitrace_meter" ]
     }
 
     public_configs = [
@@ -4905,8 +4911,14 @@ ohos_static_library("sksl_ext_static") {
     part_name = "skia"
     subsystem_name = "thirdparty"
 
+    public_external_deps = []
+
+    if (skia_use_vulkan) {
+      public_external_deps += [ "vulkan-headers:vulkan_headers" ]
+    }
+
     if (is_ohos) {
-      public_external_deps = [ "hitrace:hitrace_meter" ]
+      public_external_deps += [ "hitrace:hitrace_meter" ]
     }
 
     public_configs = [
