--- a/gn/oh_skia.gni
+++ b/gn/oh_skia.gni
@@ -85,6 +85,7 @@ declare_args() {
   skia_use_freetype2 = true
   is_skia_component_build = false
   skia_feature_zlib = ""
+  skia_feature_hispeed_plugin = false
 }
 
 use_mingw_win = "${current_os}_${current_cpu}" == "mingw_x86_64"
