--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -86,6 +86,7 @@ config("skia_public") {
     "SK_CODEC_DECODES_WBMP",
     "USE_M133_SKIA",
     "TODO_M133_SKIA",
+    "SK_USE_LEGACY_BLUR_RASTER",
   ]
   if (defined(skia_ohos_debug) && skia_ohos_debug) {
     defines += [ "SKIA_OHOS_DEBUG" ]
