--- a/build_overrides/skia.gni
+++ b/build_overrides/skia.gni
@@ -14,6 +14,7 @@ import("//build/ohos_var.gni")
 
 declare_args() {
   skia_feature_upgrade = true
+  skia_feature_use_vulkan = false
 }
 
 if (skia_feature_upgrade) {
