--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -100,6 +100,7 @@ config("skia_public") {
       "SKIA_OHOS",
       "SKIA_OHOS_SHADER_REDUCE",
       "SKIA_DFX_FOR_OHOS",
+      "SKIA_DFX_FOR_RECORD_VKIMAGE",
     ]
   }
   if (is_component_build) {
@@ -1616,6 +1617,9 @@ optional("gpu") {
     sources += skia_gpu_vk_private
     configs += [ ":use_skia_vulkan_headers" ]
     external_deps += [ "vulkan-headers:vulkan_headers" ]
+    if (is_ohos) {
+      external_deps += [ "hilog:libhilog" ]
+    }
     if (is_fuchsia) {
       if (using_fuchsia_sdk) {
         public_deps += [ "$fuchsia_sdk_root/pkg:vulkan" ]
