--- a/m133/gn/shared_sources.gni
+++ b/m133/gn/shared_sources.gni
@@ -24,7 +24,7 @@ skia_opts = {
   neon_sources = neon
   arm64_sources = arm64
   crc32_sources = crc32
-  mips_dsp_sources = none  # Chrome's src/skia/BUILD.gn uses this.
+  mips_dsp_sources = none
   sse2_sources = sse2
   ssse3_sources = ssse3
   sse41_sources = sse41
