--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -95,7 +95,7 @@ config("skia_public") {
     defines += [ "ENABLE_TEXT_ENHANCE" ]
   }
   cflags_objcc = []
-  if (is_ohos && (target_cpu == "arm" || target_cpu == "arm64")) {
+  if (is_ohos && (target_cpu == "arm" || target_cpu == "arm64" || is_emulator)) {
     defines += [
       "SKIA_OHOS",
       "SKIA_OHOS_SHADER_REDUCE",
